--- a/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
@@ -23,7 +23,6 @@ else
 {
 @:class @(Model.Name)(Model):
 }
-@* Need to handle the Polymorhpic require field, default value, comment*@
 @{
   var requiredFieldList = Model.GetRequiredFieldsList();
   var requiredStr = String.Empty;
@@ -33,7 +32,7 @@ else
     {
       requiredFieldList[i] = "'" + requiredFieldList[i] + "'";
     }
-    requiredStr = string.Join(",", requiredFieldList);
+    requiredStr = string.Join(", ", requiredFieldList);
   }
 @EmptyLine
     @:_required = [@requiredStr]
@@ -51,6 +50,15 @@ else
   }
 }
     }
+@if (Model.SubModelTypes.Any())
+{
+<text>
+@EmptyLine
+    _subtype_map = {
+        '@(Model.GetPolymorphicDiscriminator())':{@Model.GetSubModelTypeList()}
+    }
+</text>
+}
 @EmptyLine
     def __init__(self, *args, **kwargs):
 @EmptyLine
