--- a/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
@@ -34,15 +34,18 @@ namespace @(Settings.Namespace).Models
 
         @EmptyLine
 
-        /// <summary>
-        @WrapComment("/// ", ("Initializes a new instance of the " + Model.Name + " class.").EscapeXmlComment())
-        /// </summary>
-        public @(Model.Name)(@Model.ConstructorParameters)
+        @if (!string.IsNullOrEmpty(Model.ConstructorParameters))
         {
-        @foreach (var property in Model.Properties)
+        @:/// <summary>
+        @:@WrapComment("/// ", ("Initializes a new instance of the " + Model.Name + " class.").EscapeXmlComment())
+        @:/// </summary>
+        @:public @(Model.Name)(@Model.ConstructorParameters)
+        @:{
+        foreach (var property in Model.Properties)
         {
             @:@(property.Name) = @(CodeNamer.CamelCase(property.Name));
         }
+        @:}
         }
         @EmptyLine
         @foreach (var property in Model.PropertyTemplateModels)
@@ -61,7 +64,6 @@ namespace @(Settings.Namespace).Models
         @:[JsonProperty(PropertyName = "@property.SerializedName")]
         @:public @property.Type.Name @property.Name { get; @(property.IsReadOnly ? "private " : "")set; }
         @EmptyLine
-        @:
         }
 @if(@Model.ShouldValidateChain())
 {
