--- a/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
@@ -18,6 +18,26 @@
 @EmptyLine
 @:        @WrapComment(string.Empty, Model.Description)
 }
+
+@EmptyLine
+    @foreach(var parameter in Model.DocumentationParameters)
+    {
+@:        @WrapComment(string.Empty, ":param " + parameter.Name + ": " + parameter.Documentation)
+    }
+        @WrapComment(string.Empty, ":param custom_headers: headers that will be added to the request")
+        @WrapComment(string.Empty, ":param raw: returns the direct response alongside the deserialized response")
+        @WrapComment(string.Empty, ":param callback: if provided, the call will run asynchronously and call the callback when complete.  When specified the function returns a concurrent.futures.Future")
+    @foreach (var parameter in Model.DocumentationParameters)
+    {
+@:        @WrapComment(string.Empty, ":type " + parameter.Name + ": " + MethodTemplateModel.GetDocumentationType(parameter.Type, parameter.IsRequired))
+    }
+
+        @WrapComment(string.Empty, ":type custom_headers: dict")
+        @WrapComment(string.Empty, ":type raw: boolean")
+        @WrapComment(string.Empty, ":type callback: Callable[[concurrent.futures.Future], None] or None")
+
+        @WrapComment(string.Empty, string.Format(":rtype: {0} or ({0}, requests.response) or concurrent.futures.Future", MethodTemplateModel.GetDocumentationType(Model.ReturnType)))
+
         """
 @EmptyLine
         # Construct URL
