--- a/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
@@ -40,11 +40,15 @@ namespace @(Settings.Namespace).Models
         @:@WrapComment("/// ", ("Initializes a new instance of the " + Model.Name + " class.").EscapeXmlComment())
         @:/// </summary>
         @:public @(Model.Name)(@Model.ConstructorParameters)
+            if (!string.IsNullOrEmpty(Model.BaseConstructorCall))
+            {
+            @:@(Model.BaseConstructorCall)
+            }
         @:{
-        foreach (var property in Model.Properties)
-        {
+            foreach (var property in Model.Properties)
+            {
             @:@(property.Name) = @(CodeNamer.CamelCase(property.Name));
-        }
+            }
         @:}
         }
         @EmptyLine
