Update Azure.Python expected code.

--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodGroupTemplate.cshtml
@@ -25,6 +25,7 @@ from msrest.exceptions import (
     TokenExpiredError,
     ClientRequestError,
     HttpOperationError)
+import uuid
 @EmptyLine
 from ..models import *
 @EmptyLine
