--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
@@ -65,14 +65,12 @@ if(!property.IsReadOnly)
 @foreach (var operation in Model.Operations)
 {
 @EmptyLine
-@:    private @(operation.MethodGroupType) @(operation.MethodGroupName.ToCamelCase());
-@EmptyLine
 @:    /**
 @:     * Gets the @(operation.MethodGroupType) object to access its operations.
 @:     * @@return the @(operation.MethodGroupName) value.
 @:     */
 @:    public @(operation.MethodGroupType) get@(operation.MethodGroupName.ToPascalCase())() {
-@:        return this.@(operation.MethodGroupName.ToCamelCase());
+@:        return new @(operation.MethodGroupType)Impl(this.retrofitBuilder.build(), this);
 @:    }
 }
 @EmptyLine
@@ -115,15 +113,11 @@ if(!property.IsReadOnly)
 @:            this.credentials.applyCredentialsFilter(this.client);
 @:        }
     }
-
-        Retrofit retrofit = retrofitBuilder.baseUrl(baseUri).build();
+    
+        this.retrofitBuilder = retrofitBuilder.baseUrl(baseUri);
 @if (Model.MethodTemplateModels.Any())
 {
-@:        service = retrofit.create(@(Model.ServiceClientServiceType).class);
-}
-@foreach (var operation in Model.Operations)
-{
-@:        this.@(operation.MethodGroupName.ToCamelCase()) = new @(operation.MethodGroupType)Impl(retrofit, this);
+@:        service = this.retrofitBuilder.build().create(@(Model.ServiceClientServiceType).class);
 }
     }
 @if (Model.MethodTemplateModels.Any())
