Header parameter isn't set correctly. Don't generate listNext function since we already handle in Paged class.

--- a/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
@@ -7,7 +7,7 @@
 @using Microsoft.Rest.Generator.Python.Templates
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.MethodTemplateModel>
     @@async_request
-    def @(Model.Name.ToPythonCase())(self, @(Model.MethodParameterDeclaration(true))):
+    def @(Model.Name.ToPythonCase())(self, @(Model.MethodParameterDeclaration(Model.AddCustomHeader))):
         """
 @if (!String.IsNullOrEmpty(Model.Summary))
 {
@@ -50,8 +50,7 @@
 @EmptyLine
         # Construct headers
         headers = {}
-        @(Model.BuildHeaders("query"))
-        headers.update(custom_headers)
+        @(Model.BuildHeaders("headers"))
         @(Model.SetDefaultHeaders)
         headers['Content-Type'] = '@(Model.ContentType)'
 @* Add Credentials *@
