Add header serialization support (include collection format support).

--- a/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
@@ -40,6 +40,11 @@
 
         """
 @EmptyLine
+        @Model.BuildInputMappings()
+@if (Model.InputParameterTransformation.Any())
+{
+@EmptyLine
+}
         # Construct URL
         url = '@(Model.Url)'
         @(Model.BuildUrlPath("url"))
