Update the serialization code for path/query/header.

--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
@@ -91,10 +91,10 @@ class @(Model.Name)(object):
 {
 <text>
 @EmptyLine
-    def _parse_url(self, name, value, datatype):
+    def _serialize_data(self, name, value, datatype, **kwargs):
 @EmptyLine
         try:
-            value = self._serialize.serialize_data(value, datatype)
+            value = self._serialize.serialize_data(value, datatype, **kwargs)
 @EmptyLine
         except ValueError:
             raise ValueError("{} must not be None.".format(name))
