--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodGroupTemplate.cshtml
@@ -37,10 +37,10 @@ class @(Model.MethodGroupType)(object):
 @EmptyLine
         self.config = config
 @EmptyLine
-    def _parse_url(self, name, value, datatype):
+    def _serialize_data(self, name, value, datatype, **kwargs):
 @EmptyLine
         try:
-            value = self._serialize.serialize_data(value, datatype)
+            value = self._serialize.serialize_data(value, datatype, **kwargs)
 @EmptyLine
         except ValueError:
             raise ValueError("{} must not be None.".format(name))
