Update the serialization code for path/query/header. Enable stream support.

--- a/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
@@ -6,18 +6,6 @@
 @Header("# ")
 # --------------------------------------------------------------------------
 @EmptyLine
-@if (Model.ContainsDecimal)
-{
-@:from decimal import *
-}
-@if (Model.ContainsDateTime)
-{
-@:from datetime import *
-}
-@if (Model.ContainsDateTime || Model.ContainsDecimal)
-{
-@EmptyLine
-}
 from msrest.serialization import Serializer, Deserializer
 from msrest.service_client import async_request
 from msrest.exceptions import (
@@ -37,10 +25,10 @@ class @(Model.MethodGroupType)(object):
 @EmptyLine
         self.config = config
 @EmptyLine
-    def _parse_url(self, name, value, datatype):
+    def _serialize_data(self, name, value, datatype, **kwargs):
 @EmptyLine
         try:
-            value = self._serialize.serialize_data(value, datatype)
+            value = self._serialize.serialize_data(value, datatype, **kwargs)
 @EmptyLine
         except ValueError:
             raise ValueError("{} must not be None.".format(name))
