--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodGroupTemplate.cshtml
@@ -6,17 +6,6 @@
 @Header("# ")
 # --------------------------------------------------------------------------
 @EmptyLine
-import sys
-@EmptyLine
-@if (Model.ContainsDecimal)
-{
-@:from decimal import *
-}
-@if (Model.ContainsDateTime)
-{
-@:from datetime import *
-}
-@EmptyLine
 from msrest.serialization import Serializer, Deserializer
 from msrest.service_client import async_request
 from msrest.exceptions import (
@@ -37,10 +26,10 @@ class @(Model.MethodGroupType)(object):
 @EmptyLine
         self.config = config
 @EmptyLine
-    def _parse_url(self, name, value, datatype):
+    def _serialize_data(self, name, value, datatype, **kwargs):
 @EmptyLine
         try:
-            value = self._serialize.serialize_data(value, datatype)
+            value = self._serialize.serialize_data(value, datatype, **kwargs)
 @EmptyLine
         except ValueError:
             raise ValueError("{} must not be None.".format(name))
