--- a/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureMethodTemplate.cshtml
@@ -49,6 +49,9 @@ else
  *                      {@Model.DocumentReturnTypeString} [result]   - The deserialized result object.
 @WrapComment(" *                      ", Model.ReturnTypeInfo)
  *
+ *                      {@Model.DocumentReturnHeaderTypeString} [responseHeaders]   - The deserialized headers object.
+@WrapComment(" *                      ", Model.ReturnHeaderTypeInfo)
+ *
  *                      {object} [request]  - The HTTP Request object if an error did not occur.
  *
  *                      {stream} [response] - The HTTP Response stream if an error did not occur.
@@ -79,11 +82,11 @@ else
       // Create Header
       @if (Model.ReturnType.Headers != null)
       {
-      @:var header = new client._models['@(Model.ReturnType.Headers.Name)'](response.headers);
-      @:header.deserialize(response.headers);
+      @:var responseHeaders = new client._models['@(Model.ReturnType.Headers.Name)'](response.headers);
+      @:responseHeaders.deserialize(response.headers);
       } else
       {
-      @:var header = null;
+      @:var responseHeaders = null;
       }
       // Create Result
       var result = null;
@@ -103,7 +106,7 @@ else
       @:@(Model.DeserializeResponse(Model.DefaultResponse.Body))
       }
       @EmptyLine
-      return callback(null, result, header, httpRequest, response);
+      return callback(null, result, responseHeaders, httpRequest, response);
     });
   });
 };
