--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodJsonPipelineTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodJsonPipelineTemplate.cshtml
@@ -53,12 +53,12 @@ return client.pipeline(httpRequest, function (err, response, responseBody) {
   // Create Header
   @if (Model.ReturnType.Headers != null)
   {
-  @:var header = new client._models['@(Model.ReturnType.Headers.Name)'](response.headers);
-  @:header.deserialize(response.headers);
+  @:var responseHeaders = new client._models['@(Model.ReturnType.Headers.Name)'](response.headers);
+  @:responseHeaders.deserialize(response.headers);
   }
   else
   {
-  @:var header = null;
+  @:var responseHeaders = null;
   }
   // Create Result
   var result = null;
@@ -79,5 +79,5 @@ return client.pipeline(httpRequest, function (err, response, responseBody) {
   }
   @EmptyLine
 
-  return callback(null, result, header, httpRequest, response);
+  return callback(null, result, responseHeaders, httpRequest, response);
 });
