--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
@@ -40,6 +40,9 @@
  *
  *                      {@Model.DocumentReturnTypeString} [result]   - The deserialized result object.
 @WrapComment(" *                      ", Model.ReturnTypeInfo)
+ * 
+ *                      {@Model.DocumentReturnHeaderTypeString} [responseHeaders]   - The deserialized headers object.
+@WrapComment(" *                      ", Model.ReturnHeaderTypeInfo)
  *
  *                      {object} [request]  - The HTTP Request object if an error did not occur.
  *
