Fix tox test and update code to remove useless import.

--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -14,12 +14,7 @@ from msrest import Configuration, Serializer, Deserializer
 {
 <text>
 from msrest.service_client import async_request
-from msrest.exceptions import (
-    SerializationError,
-    DeserializationError,
-    TokenExpiredError,
-    ClientRequestError,
-    HttpOperationError)
+from msrest.exceptions import DeserializationError, HttpOperationError
 </text>
 }
 @if (Model.MethodGroupModels.Any())
