--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodGroupTemplate.cshtml
@@ -10,7 +10,7 @@
 from msrest.serialization import Serializer, Deserializer
 from msrest.service_client import async_request
 from msrest.exceptions import DeserializationError, HttpOperationError
-from msrestazure.exceptions import CloudException
+from msrestazure.azure_exceptions import CloudError
 import uuid
 @EmptyLine
 from ..models import *
