--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
@@ -42,34 +42,12 @@ class @(Model.Name)Configuration(AzureConfiguration):
             base_url = '@Model.BaseUrl'
 @EmptyLine
         super(@(Model.Name)Configuration, self).__init__(base_url, filepath)
-@{
-  var propertiesRequired = Model.Properties.Where(p => p.IsRequired);
-  if (propertiesRequired.Any())
-  {
+@if (Model.Properties.Any())
+{
 @EmptyLine
-    foreach (var property in propertiesRequired)
-    {
-        @:self.@(property.Name) = @(property.Name)
-    }
-  }
-}
-@{
-  var propertiesHasDefault = Model.Properties.Where(p => p.DefaultValue != null);
-  if (propertiesHasDefault.Any())
+  foreach (var property in Model.Properties)
   {
-    @EmptyLine
-    foreach (var property in propertiesHasDefault)
-    {
-      if (property.IsRequired)
-      {
-        @:if self.@(property.Name) is None:
-            @:self.@(property.Name) = @(property.DefaultValue)
-      }
-      else
-      {
-        @:self.@(property.Name) = @(property.DefaultValue)
-      }
-    }
+        @:self.@(property.Name) = @(property.Name)
   }
 }
 @EmptyLine
