More LRO and paging tests

--- a/AutoRest/Generators/Python/Azure.Python/Templates/PageTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/PageTemplate.cshtml
@@ -11,7 +11,7 @@
 @Header("# ")
 # --------------------------------------------------------------------------
 @EmptyLine
-from runtime.msrest.paging import Paged
+from msrest.paging import Paged
 @EmptyLine
 @EmptyLine
 class @(Model.TypeDefinitionName)(Paged):
