--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
@@ -18,6 +18,10 @@ from msrestazure import AzureConfiguration
 from msrest.service_client import async_request
 from msrest.exceptions import DeserializationError, HttpOperationError
 from msrestazure.azure_exceptions import CloudError
+@if (Model.HasAnyLongRunOperation)
+{
+@:from msrestazure.azure_operation import AzureOperationPoller
+}
 import uuid
 </text>
 }
