--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -33,7 +33,8 @@ from msrest.exceptions import DeserializationError, HttpOperationError
 @EmptyLine
 class @(Model.Name)Configuration(Configuration):
 @EmptyLine
-    def __init__(self, @(Model.RequiredConstructorParameters)base_url=None, filepath=None):
+    def __init__(
+            self, @(Model.RequiredConstructorParameters)base_url=None, filepath=None):
 @EmptyLine
         if not base_url:
             base_url = '@Model.BaseUrl'
@@ -69,7 +70,8 @@ else
         self.config = config
 @foreach (var methodGroup in Model.MethodGroupModels)
 {
-        @:self.@(methodGroup.MethodGroupName) = @(methodGroup.MethodGroupType)(self._client, self.config, self._serialize, self._deserialize)
+        @:self.@(methodGroup.MethodGroupName) = @(methodGroup.MethodGroupType)(
+            @:self._client, self.config, self._serialize, self._deserialize)
 }
 @foreach (var method in Model.MethodTemplateModels)
 {
