--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodTemplate.cshtml
@@ -14,7 +14,8 @@ else if (Model.IsPagingMethod)
 {
 <text>
     @@async_request
-    def @(Model.Name.ToPythonCase())(self, @(Model.MethodParameterDeclaration(true))):
+    def @(Model.Name.ToPythonCase())(
+            self, @(Model.MethodParameterDeclaration(true))):
         """
 @if (!String.IsNullOrEmpty(Model.Summary))
 {
@@ -92,11 +93,13 @@ else if (Model.IsPagingMethod)
             request = self._client.@(MethodTemplateModel.GetHttpFunction(Model.HttpMethod))(url, query_parameters)
 @if (Model.RequestBody != null)
 {
-            @:response = self._client.send(request, header_parameters, body_content)
+            @:response = self._client.send(
+                @:request, header_parameters, body_content, **operation_config)
 }
 else
 {
-            @:response = self._client.send(request, header_parameters)
+            @:response = self._client.send(
+                @:request, header_parameters, **operation_config)
 }
 @EmptyLine
             if @Model.FailureStatusCodePredicate:
@@ -118,7 +121,8 @@ else
 else //Long running operations
 {
 <text>
-    def @(Model.Name.ToPythonCase())(self, @(Model.MethodParameterDeclaration(Model.AddCustomHeader))):
+    def @(Model.Name.ToPythonCase())(
+            self, @(Model.MethodParameterDeclaration(Model.AddCustomHeader))):
         """
 @*need to fix comment here for long running function*@
 @if (!String.IsNullOrEmpty(Model.Summary))
@@ -190,16 +194,18 @@ else //Long running operations
             request = self._client.@(MethodTemplateModel.GetHttpFunction(Model.HttpMethod))(url, query_parameters)
 @if (Model.RequestBody != null)
 {
-            @:return self._client.send(request, header_parameters, body_content)
+            @:return self._client.send(
+                @:request, header_parameters, body_content, **operation_config)
 }
 else
 {
-            @:return self._client.send(request, header_parameters)
+            @:return self._client.send(request, header_parameters, **operation_config)
 }
 @EmptyLine
         def get_long_running_status(status_link):
             request = self._client.get(status_link)
-            return self._client.send(request, header_parameters)
+            return self._client.send(
+                request, header_parameters, **operation_config)
 @EmptyLine
         def get_long_running_output(response):
             if @Model.FailureStatusCodePredicate:
@@ -243,6 +249,11 @@ else
                 @:return None, response
 }
 @EmptyLine
-        return AzureOperationPoller(long_running_send, get_long_running_output, get_long_running_status, self.config.long_running_operation_timeout)
+        long_running_operation_timeout = operation_config.get(
+            'long_running_operation_timeout',
+            self.config.long_running_operation_timeout)
+        return AzureOperationPoller(
+            long_running_send, get_long_running_output,
+            get_long_running_status, long_running_operation_timeout)
 </text>
 }
